--- a/#source/scss/cart-page.scss
+++ b/#source/scss/cart-page.scss
@@ -1,5 +1,5 @@
 .cartcontent {
-    padding: 50px 0 170px 0;
+    padding: 50px 0 70px 0;
     position: relative;
 }
 
@@ -532,7 +532,7 @@
     }
 
     .cartcontent {
-        padding-bottom: 100px;
+        padding-bottom: 0;
     }
 
 }
@@ -676,11 +676,6 @@
     .basketblock__totalbox .totalinfo {
         margin-bottom: 20px;
     }
-
-    .cartcontent {
-        padding-bottom: 80px;
-    }
-
 
     .shippingest__body,
     .basketblock .basketblock__body {
