--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -395,7 +395,7 @@
 }
 
 .latestfooddiscuss {
-    padding-bottom: 140px;
+    padding-bottom: 0;
 }
 
 
@@ -456,7 +456,7 @@
 
 
     .latestfooddiscuss {
-        padding: 60px 0 80px;
+        padding: 60px 0 0 0;
     }
 
     .productsection,
