--- a/#source/scss/checkout.scss
+++ b/#source/scss/checkout.scss
@@ -57,7 +57,7 @@
 // ---
 .checkoutsect {
     position: relative;
-    padding: 50px 0 170px;
+    padding: 50px 0 70px;
 }
 
 .chinfosect {
@@ -815,7 +815,7 @@
     }
 
     .checkoutsect {
-        padding-bottom: 100px;
+        padding-bottom: 0;
     }
 
     .basketblock__totalbox .greenbtn {
@@ -1045,7 +1045,7 @@
 }
 
 .checkout-tysect {
-    margin: 80px 0 120px;
+    margin: 80px 0 20px;
     border-radius: 10px;
     background: $white;
     box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
@@ -1112,7 +1112,7 @@
 
     .checkout-tysect .continf {
         font-size: 18px;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
 
 }
@@ -1145,7 +1145,7 @@
 
 @media(max-width:575.8px) {
     .checkout-tysect {
-        margin: 50px 0 80px;
+        margin: 50px 0 0 0;
         padding: 30px 30px 60px;
 
         img {
