--- a/#source/scss/contact-us.scss
+++ b/#source/scss/contact-us.scss
@@ -235,7 +235,7 @@
 // faq
 
 .askedquestions {
-    padding: 140px 0 200px;
+    padding: 140px 0 100px;
 }
 
 .askedquestions__right {
@@ -372,7 +372,7 @@
     }
 
     .askedquestions {
-        padding: 100px 0 100px;
+        padding: 100px 0 50px;
     }
 
 }
@@ -429,7 +429,7 @@
     }
 
     .askedquestions {
-        padding: 60px 0 100px;
+        padding: 60px 0 50px 0;
     }
 
 
@@ -487,7 +487,7 @@
     }
 
     .askedquestions {
-        padding-bottom: 80px;
+        padding-bottom: 0;
     }
 
 
