--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -9,6 +9,7 @@
     visibility: hidden;
     z-index: -1;
     background: rgba(0, 0, 0, 0.15);
+    transition: 0.3s;
 
     &.active {
         opacity: 1;
@@ -207,6 +208,8 @@
     }
 
 
-    
+
 
 }
+
+
