--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -213,3 +213,280 @@
 }
 
 
+
+// video modal
+
+.videopopup {
+    padding: 50px 0;
+
+    .popup__close {
+        z-index: 2;
+        background-color: rgba(21, 132, 102, 1);
+        color: #fff;
+        top: 30px;
+        right: 30px;
+
+        &:hover {
+            opacity: 0.7;
+        }
+    }
+
+    .popup__body {
+        max-width: 1200px;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .plyr__poster,
+    .plyr__video-wrapper,
+    .plyr--video {
+        background: transparent !important;
+    }
+
+    .plyr__control--overlaid {
+        width: 65px;
+        height: 65px;
+        background-color: rgba(19, 176, 134, 0.78) !important;
+        background-image: url('../img/recipes/video-play.svg') !important;
+        background-repeat: no-repeat !important;
+        background-size: 29px !important;
+        background-position: 21px center !important;
+        transition: 0.3s;
+
+        &:hover {
+            background-color: rgba(19, 176, 134, 1) !important;
+        }
+
+        svg {
+            display: none;
+        }
+    }
+
+    .plyr--video .plyr__controls {
+        background: rgba(33, 41, 47, 0.43);
+        padding: 20px 60px;
+
+        .plyr__control {
+            transition: none;
+        }
+    }
+
+    .plyr__controls>.plyr__control[aria-label="Play"] {
+        background-color: $white !important;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        background-image: url('../img/recipes/play-controll.svg') !important;
+        background-repeat: no-repeat !important;
+        background-position: 17px center !important;
+
+        svg {
+            display: none;
+        }
+    }
+
+    .plyr__controls .plyr__control[aria-label="Play"].plyr__control--pressed {
+        background-image: url('../img/recipes/pause-button.png') !important;
+        background-size: 24px;
+        background-position: 13px center !important;
+    }
+
+    .plyr__menu__container .plyr__control[role=menuitemradio][aria-checked=true]::before {
+        background: rgba(19, 176, 134, 0.78);
+    }
+
+
+
+
+
+    .plyr--full-ui input[type=range] {
+        color: $base-green;
+    }
+
+    .plyr--video .plyr__control.plyr__tab-focus,
+    .plyr--video .plyr__control:hover,
+    .plyr--video .plyr__control[aria-expanded=true] {
+        background: $base-green;
+    }
+
+    [data-plyr="pip"] {
+        display: none;
+    }
+}
+
+.descrvideowrap {
+    padding: 80px 130px;
+
+    .video__topinfo {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 60px;
+
+        .video__topinfo-writereview {
+            width: 100%;
+            max-width: 55%;
+            flex: 0 0 55%;
+            padding-right: 60px;
+            position: relative;
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 1.5px;
+                height: 45px;
+                background: rgba(21, 132, 102, 0.4);
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            .recipe-rightsect__writereview {
+                padding-bottom: 0;
+                border: none;
+            }
+        }
+
+        .video__topinfo-soc {
+            width: 100%;
+            max-width: 45%;
+            flex: 0 0 45%;
+            padding-left: 60px;
+
+            .recipe-rightsect__setbox {
+                padding: 0;
+                border: none;
+
+                .recipe-rightsect__setbox-print,
+                .recipe-rightsect__setbox-soc {
+                    max-width: 100%;
+                    flex: 0 0 auto;
+
+                    p {
+                        min-width: 106px;
+                    }
+                }
+
+                .recipe-rightsect__setbox-print {
+                    margin-bottom: 20px;
+                }
+
+
+            }
+        }
+    }
+
+    .recipe-content {
+        padding-right: 0;
+    }
+
+    .recipe-ingredients {
+        margin-bottom: 0;
+
+        .recipe-ingredients__body {
+            padding-bottom: 0;
+        }
+    }
+
+
+
+
+
+
+
+
+
+}
+
+@media(max-width:991.8px) {
+
+    .videopopup .plyr--video .plyr__controls {
+        padding: 10px 20px;
+    }
+
+    .descrvideowrap {
+        padding: 40px 30px;
+    }
+
+    .descrvideowrap {
+
+        .recipe-rightsect__writereview .ratinfo,
+        .recipe-rightsect__writereview .greenbtn {
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-writereview {
+        padding-right: 30px;
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-soc {
+        padding-left: 30px;
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-writereview:after {
+        height: 110px;
+    }
+
+
+}
+
+@media(max-width:767.8px) {
+
+    .descrvideowrap .video__topinfo .video__topinfo-soc {
+        max-width: 100%;
+        flex: 0 0 100%;
+        padding-left: 0;
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-writereview {
+        max-width: 100%;
+        flex: 0 0 100%;
+        padding-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-writereview:after {
+        display: none;
+    }
+}
+
+@media(max-width:575.8px) {
+    .videopopup .popup__close {
+        right: 15px;
+        top: 15px;
+    }
+
+    .videopopup .plyr__controls>.plyr__control[aria-label=Play] {
+        width: 30px;
+        height: 30px;
+        padding: 0;
+    }
+
+    .videopopup .plyr__controls>.plyr__control[aria-label=Play] {
+        background-position: center !important;
+        background-size: 13px !important;
+    }
+
+    .videopopup .plyr__controls .plyr__control[aria-label=Play].plyr__control--pressed {
+        background-position: center !important;
+    }
+
+    .descrvideowrap {
+        padding: 20px;
+    }
+
+    .descrvideowrap .video__topinfo .video__topinfo-soc .recipe-rightsect__setbox .recipe-rightsect__setbox-print {
+        margin-bottom: 10px;
+    }
+
+    .descrvideowrap .video__topinfo {
+        margin-bottom: 30px;
+    }
+
+    .videopopup {
+        padding: 0;
+    }
+
+}
