--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -490,3 +490,82 @@
     }
 
 }
+
+// THANKS
+.popup__window.thanks {
+    .popup__body {
+        max-width: 940px;
+        padding: 135px 50px;
+    }
+
+    .thankspopupwrapper {
+        text-align: center;
+
+        .title {
+            font-family: 'Poetsenone';
+            margin-bottom: 40px;
+            color: $base-green;
+            font-size: 55px;
+            font-weight: 400;
+            line-height: 110%;
+            letter-spacing: 1.879px;
+            text-transform: uppercase;
+        }
+
+        .descr {
+            max-width: 665px;
+            margin: 0 auto 55px;
+            color: #373737;
+            line-height: 150%;
+
+            p {
+                margin: 0;
+            }
+        }
+
+        .greenbtn {
+            margin: 0 auto;
+            width: 328px;
+            min-height: 60px;
+            font-size: 17px;
+        }
+    }
+}
+
+@media(max-width:1199.8px) {
+
+    .popup__window.thanks .popup__body {
+        max-width: 700px;
+        padding: 70px 40px;
+    }
+
+    .popup__window.thanks .thankspopupwrapper .title {
+        font-size: 42px;
+        margin-bottom: 20px;
+    }
+
+    .popup__window.thanks .thankspopupwrapper .descr {
+        margin-bottom: 40px;
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .popup__window.thanks .thankspopupwrapper .title {
+        font-size: 32px;
+    }
+
+    .popup__window.thanks .popup__body {
+        padding: 40px 20px;
+    }
+
+    .popup__window.thanks .thankspopupwrapper .greenbtn {
+        max-width: 100%;
+    }
+
+
+
+
+
+
+}
