--- a/#source/scss/recipes-center.scss
+++ b/#source/scss/recipes-center.scss
@@ -7,7 +7,6 @@
     }
 }
 
-
 .recipessearch__wrap {
     display: flex;
     flex-wrap: wrap;
@@ -577,7 +576,7 @@
     }
 }
 
-.recipesslider  {
+.recipesslider {
     .productsection__header p {
         font-size: 30px;
     }
@@ -625,7 +624,7 @@
 
 }
 
-@media(max-width:575.8px)  {
+@media(max-width:575.8px) {
     .reccatnamewrap {
         height: 120px;
     }
@@ -643,6 +642,8 @@
     }
 
     .recipesslider .productsection__header p {
+        // font-size: 18px;
+
         &:last-child {
             margin-bottom: 0;
         }
@@ -652,6 +653,473 @@
     .recipecategoryname {
         padding-top: 15px;
     }
+
+
+
+
+
+
+}
+
+
+// CREATE RECIPE
+
+.createrecipesect {
+    padding: 80px 0 0 0;
+    color: $bace-color;
+
+    .inputfield {
+        margin-bottom: 30px;
+    }
+
+    .addingredients {
+        margin-bottom: 50px;
+
+        .title {
+            margin-bottom: 10px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 160%;
+        }
+
+        .ingrinp {
+            position: relative;
+            padding-left: 20px;
+            margin-bottom: 20px;
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background: $base-green;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+
+            input {
+                border: none;
+                font-size: 16px;
+                color: #373737;
+                width: 100%;
+
+                &:focus {
+                    border: 1px solid #8E939A;
+                    border-radius: 5px;
+                    height: 40px;
+                    width: 250px;
+                }
+            }
+        }
+
+        .addingr {
+            cursor: pointer;
+
+            p {
+                margin: 0;
+                color: $base-green;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 150%;
+                position: relative;
+                padding-left: 20px;
+
+                &::after {
+                    content: '';
+                    display: inline-block;
+                    width: 10px;
+                    height: 10px;
+                    border-radius: 50%;
+                    background: $base-green;
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+
+                .addbtn {
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 5px;
+                    border: 1px solid $base-green;
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-weight: 500;
+                    font-size: 20px;
+                    line-height: 1;
+                    vertical-align: middle;
+                    margin-left: 10px;
+                }
+            }
+        }
+
+    }
+
+    .crrecradiobox {
+        display: flex;
+        align-items: center;
+        margin-bottom: 35px;
+
+        p {
+            margin: 0;
+            width: 100%;
+            flex: 0 0 300px;
+            flex: 0 0 300px;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 160%;
+        }
+
+        .radinpwrap {
+            width: 100%;
+            flex: 0 0 calc(100% - 300px);
+            flex: 0 0 calc(100% - 300px);
+            display: flex;
+            align-items: center;
+
+            .radinpbox {
+                margin-right: 70px;
+                min-width: 110px;
+
+                input {
+                    display: none;
+
+                    &:checked {
+                        &+label {
+                            &::after {
+                                border-color: $base-green;
+                                background: url('../img/recipes/radio-checked.svg') no-repeat center / 10px;
+                            }
+                        }
+                    }
+                }
+
+                label {
+                    position: relative;
+                    padding-left: 32px;
+                    cursor: pointer;
+                    font-size: 18px;
+                    font-weight: 500;
+                    line-height: 160%;
+
+                    &::after {
+                        content: '';
+                        display: inline-block;
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 50%;
+                        border: 1px solid #3B454C;
+                        position: absolute;
+                        left: 0;
+                        top: -1px;
+                    }
+                }
+
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+
+            .preptime {
+                width: 100px;
+                padding: 10px 20px;
+                border-radius: 30px;
+                border: 1px solid #D9DBDF;
+                display: flex;
+                align-items: center;
+
+                input {
+                    width: 100%;
+                    max-width: 24px;
+                    flex: 0 0 24px;
+                    border: none;
+                    color: rgba(33, 41, 47, 1);
+                    font-size: 16px;
+                    font-weight: 500;
+                    text-align: center;
+
+                    &::placeholder {
+                        color: rgba(33, 41, 47, 0.70);
+                    }
+                }
+
+                span {
+                    font-size: 16px;
+                    font-weight: 500;
+                    line-height: 100%;
+                    width: 100%;
+                    max-width: calc(100% - 24px);
+                    flex: 0 0 calc(100% - 24px);
+                }
+            }
+
+
+
+
+        }
+    }
+
+    .crrecradiosect {
+        margin-bottom: 60px;
+    }
+
+}
+
+.createrec-uploadphoto .uplinfotext {
+    margin-bottom: 25px;
+    color: #9AA0A4;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 160%;
+}
+
+.createrec-uploadphoto {
+    line-height: 150%;
+
+    .title {
+        font-family: 'Poppins', sans-serif;
+        margin-bottom: 40px;
+        font-size: 30px;
+        font-weight: 500;
+        line-height: 140%;
+    }
+
+    p {
+        color: #373737;
+        margin-bottom: 20px;
+    }
+
+    ul {
+        padding: 0;
+        margin: 0 0 40px 0;
+        list-style-type: none;
+
+        li {
+            color: #373737;
+            line-height: 150%;
+            margin-bottom: 15px;
+            position: relative;
+            padding-left: 26px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 16px;
+                height: 16px;
+                position: absolute;
+                left: 0;
+                top: 3px;
+                background: url('../img/general/list-check.svg') no-repeat center / 100%;
+            }
+        }
+    }
+
+    .imageuploadify .imageuploadify-images-list button.btn-default {
+        width: 100%;
+        max-width: 100%;
+
+        span {
+            max-width: 125px;
+            display: inline-block;
+        }
+
+        .addphoto {
+            display: none;
+        }
+    }
+
+    .imageuploadify .imageuploadify-images-list button.btn-default {
+        margin-bottom: 35px;
+    }
+
+
+}
+
+.createrecipesect__submit {
+    margin-top: 60px;
+    padding-top: 50px;
+    border-top: 1px solid rgba(21, 132, 102, 0.4);
+
+    .greenbtn {
+        min-height: 60px;
+        max-width: 328px;
+        font-size: 17px;
+    }
+}
+
+.imageuploadify .imageuploadify-images-list i {
+    margin-top: 0;
+    font-size: 160px;
+}
+
+
+@media(max-width:1199.8px) {
+
+    .createrecipesect {
+        padding-top: 40px;
+    }
+
+    .createrecipesect .crrecradiobox .radinpwrap .radinpbox {
+        min-width: 100px;
+    }
+
+    .uploadphoto {
+
+        .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+            margin-right: 20px !important;
+        }
+    }
+
+    .createrecipesect .crrecradiobox {
+        flex-wrap: wrap;
+
+        p {
+            max-width: 100%;
+            flex: 0 0 100%;
+            margin-bottom: 10px;
+        }
+    }
+
+
+
+
+
+
+
+    .createrecipesect .crrecradiobox p,
+    .createrecipesect .crrecradiobox .radinpwrap .radinpbox label {
+        font-size: 16px;
+    }
+}
+
+@media(max-width:991.8px) {
+    .uploadphoto .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+        width: 200px;
+        margin-right: 10px !important;
+    }
+
+    .createrecipesect__submit {
+        margin-top: 30px;
+        padding-top: 40px;
+    }
+
+
+
+}
+
+@media(max-width:575.8px) {
+
+    .createrecipesect .crrecradiobox .radinpwrap .radinpbox {
+        margin-right: 30px;
+        min-width: inherit;
+    }
+
+    .createrecipesect .crrecradiobox .radinpwrap .radinpbox label {
+        font-size: 14px;
+        padding-left: 28px;
+    }
+
+    .createrecipesect .crrecradiobox .radinpwrap .preptime {
+        width: 120px;
+    }
+
+    .createrecipesect .crrecradiobox .radinpwrap .preptime input {
+        max-width: 34px;
+        flex: 0 0 34px;
+    }
+
+    .uploadphoto .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+        width: 45%;
+    }
+
+    .imageuploadify .imageuploadify-images-list i {
+        font-size: 120px;
+    }
+
+}
+
+.recfavsearch .searchboxwrap {
+    padding: 25px 0 35px;
+    border-bottom: 1px solid #D9DBDF;
+}
+
+.recfavsortbtns {
+    padding-top: 30px;
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+
+        li {
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 30px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            a {
+                display: inline-block;
+                padding: 10px 25px;
+                border: 1px solid transparent;
+                border-radius: 70px;
+                color: #3B454C;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 110%;
+                transition: 0.3s;
+
+                &.active {
+                    border: 1px solid $base-green;
+                    color: $base-green;
+                }
+
+                &:hover {
+                    color: $base-green;
+                }
+            }
+        }
+    }
+}
+
+@media(max-width:767.8px) {
+    .recfavsortbtns ul li {
+        margin-right: 10px;
+
+        a {
+            padding: 10px 20px;
+        }
+    }
+
+    .recfavsearch .searchboxwrap {
+        padding: 20px 0;
+    }
+
+
+
+}
+
+@media(max-width:575.8px) {
+    .recfavsortbtns ul li {
+        margin-right: 10px;
+
+      
+    }
+}
+
+@media(max-width:360.8px) {
+
 
 
 }
