--- a/#source/scss/send-feedback.scss
+++ b/#source/scss/send-feedback.scss
@@ -187,6 +187,10 @@
     display: none;
 }
 
+.selectrating .addphotovideo {
+    display: none;
+}
+
 @media(max-width:991.8px) {
 
     .sfcontent {
@@ -283,3 +287,4 @@
         padding: 30px 15px 30px 15px;
     }
 }
+
